ref: Isolating components of login like input and button

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,8 @@
   "plugins": ["react", "react-hooks", "@typescript-eslint"],
   "rules": {
     "prettier/prettier": "error",
+    "react/jsx-props-no-spreading": "off",
+    "react/prop-types": "off",
     "react-hooks/rule-of-hooks": "error",
     "react/hooks/exhaustive-deps": "warn",
     "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
